--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,3 +1,9 @@
 main:
   - title: "About"
     url: /about
+  - title: "History"
+    url: /history/
+  - title: "Activities"
+    url: /activities/
+  - title: "Dining"
+    url: /dining/
