--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ main:
   - title: "About"
     url: /about
   - title: "History"
-    url: /history/
+    url: /history
   - title: "Activities"
-    url: /activities/
+    url: /activities
   - title: "Dining"
-    url: /dining/
+    url: /dining
